# Diploma_thesis

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
contextly/: db.py  main.py  settings.py
contextly/models/: user.py  video.py
contextly/routers/: static.py  user.py  video.py
contextly/templates/: base.html  done.html  download.html  download_list.html  index.html  login.html  register.html  video.html
contextly/utils/: auth.py  summarizer.py  transcriber.py  youtubedl.py
detection_site/: manage.py
detection_site/detection_site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  pages_test.py
